objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ActiveCDRQualitativeData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active CDR Qualitative Data</label>
        <referenceTo>CDRQualitativeData__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AffiliateLU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>BALANCED</fullName>
                </value>
                <value>
                    <fullName>EQUITY</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME-MONEY MKT</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET-CASH</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetSubClass__c</fullName>
        <label>Asset Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>BALANCED</fullName>
                </value>
                <value>
                    <fullName>EQUITY</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME-MONEY MKT</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-TAXABLE</fullName>
                </value>
                <value>
                    <fullName>LOANS</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET-CASH</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BenchmarkId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Benchmark Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CUSIPFormatted__c</fullName>
        <formula>IF(NOT(ISBLANK(CUSIP__c)),LEFT( CUSIP__c,6)&amp;"-"&amp;MID(CUSIP__c,7,2)&amp;"-"&amp;RIGHT(CUSIP__c,1),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUSIP Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSIP__c</fullName>
        <externalId>true</externalId>
        <label>CUSIP</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLRSFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to include products in DLRS, a related formula field is on the Trans Summary table</description>
        <label>DLRS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplaySECTaxEquivalentYield__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, product performance will display the SEC Tax-Equivalent Yield</inlineHelpText>
        <label>Display SEC Tax-Equivalent Yield?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FactSetEquityCharacteristicsId__c</fullName>
        <externalId>true</externalId>
        <label>FactSet Equity Characteristics Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FundCode__c</fullName>
        <description>Used in production of Seismic documents for compliance tracking (AdTrax) and Informatica integrations for manually-created files</description>
        <externalId>true</externalId>
        <inlineHelpText>Used in production of Seismic documents for compliance tracking (AdTrax) and Informatica integrations for manually-created files</inlineHelpText>
        <label>Fund Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FundCompany__c</fullName>
        <description>To populate with the value from MARS.  This is what we refer to as the Affiliate but this isn't a look up field to the affiliate record.</description>
        <label>Fund Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundNumber__c</fullName>
        <externalId>true</externalId>
        <label>Fund Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundstationID__c</fullName>
        <externalId>true</externalId>
        <label>Fundstation ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HarrisFundName__c</fullName>
        <externalId>true</externalId>
        <label>Harris Fund Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISIN__c</fullName>
        <label>ISIN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InceptionDate__c</fullName>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegalName__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalNamewithTicker__c</fullName>
        <formula>LegalName__c &amp; IF (NOT(ISBLANK(TradingSymbol__c)), " - " &amp; TradingSymbol__c, "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name with Ticker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoomisFundCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used in integrations with Loomis such as the Loomis Product Characteristics integration</description>
        <externalId>true</externalId>
        <label>Loomis Fund Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MARSAffiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Affiliate as integrated from MARS; found by looking up Fund Company on Account</description>
        <label>MARS Affiliate</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products (MARS Affiliate)</relationshipLabel>
        <relationshipName>MARSAffiliateProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MARSAssetClass__c</fullName>
        <description>Asset Class as integrated from MARS</description>
        <label>MARS Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>BALANCED</fullName>
                </value>
                <value>
                    <fullName>EQUITY</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME-MONEY MKT</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET-CASH</fullName>
                </value>
                <value>
                    <fullName>MULTI ASSET</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSAssetSubClass__c</fullName>
        <description>Asset Sub Class as integrated from MARS</description>
        <label>MARS Asset Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>BALANCED</fullName>
                </value>
                <value>
                    <fullName>EQUITY</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME-MONEY MKT</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-TAXABLE</fullName>
                </value>
                <value>
                    <fullName>LOANS</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET-CASH</fullName>
                </value>
                <value>
                    <fullName>MULTI ASSET</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSCUSIP__c</fullName>
        <description>CUSIP as integrated from MARS</description>
        <inlineHelpText>Provided for internal matching purposes only.  Not to be exported, shared, or published externally.</inlineHelpText>
        <label>MARS CUSIP</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARSFundType__c</fullName>
        <description>The Fund Type as integrated from MARS</description>
        <label>MARS Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLOSED END</fullName>
                </value>
                <value>
                    <fullName>DUMMY PRODUCT</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL LP</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL SMA</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT MULTI</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT SINGLE</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT SLEEVE</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
                <value>
                    <fullName>OFFSHORE</fullName>
                </value>
                <value>
                    <fullName>OPEN END</fullName>
                </value>
                <value>
                    <fullName>OPEN END SLEEVE</fullName>
                </value>
                <value>
                    <fullName>SICAV-OPEN END OFFSHORE</fullName>
                </value>
                <value>
                    <fullName>SUB ADVISED MANDATE</fullName>
                </value>
                <value>
                    <fullName>SUB ADVISED SMA</fullName>
                </value>
                <value>
                    <fullName>SUB ADVISED VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSInvestmentObjective__c</fullName>
        <description>Investment Objective as integrated from MARS</description>
        <label>MARS Investment Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSOLUTE RETURN</fullName>
                </value>
                <value>
                    <fullName>ADJUSTABLE RATE GOVT</fullName>
                </value>
                <value>
                    <fullName>ADR INDEX</fullName>
                </value>
                <value>
                    <fullName>ALL CAP</fullName>
                </value>
                <value>
                    <fullName>ALL CAP GROWTH</fullName>
                </value>
                <value>
                    <fullName>ALL EQUITY</fullName>
                </value>
                <value>
                    <fullName>ALPHA HEDGED</fullName>
                </value>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>ALT LONG/SHORT DEBT</fullName>
                </value>
                <value>
                    <fullName>ALT MARKET NEUTRAL EQUITY</fullName>
                </value>
                <value>
                    <fullName>ALT SYSTEMATIC FUTURES</fullName>
                </value>
                <value>
                    <fullName>ASIA EX JAPAN EQUITY</fullName>
                </value>
                <value>
                    <fullName>ASIA PACIFIC EQUITY</fullName>
                </value>
                <value>
                    <fullName>ASIA PACIFIC EX JAPAN EQUITY</fullName>
                </value>
                <value>
                    <fullName>BALANCED</fullName>
                </value>
                <value>
                    <fullName>BANK LOANS</fullName>
                </value>
                <value>
                    <fullName>BARCLAYS US CORPORATE HIGH YIELD TR USD</fullName>
                </value>
                <value>
                    <fullName>BOND</fullName>
                </value>
                <value>
                    <fullName>BOND TRUST FUND</fullName>
                </value>
                <value>
                    <fullName>CANADA EQUITY</fullName>
                </value>
                <value>
                    <fullName>CAPITAL GROWTH ACTIVE PASSIVE</fullName>
                </value>
                <value>
                    <fullName>CARBON NEUTRAL US</fullName>
                </value>
                <value>
                    <fullName>CASH</fullName>
                </value>
                <value>
                    <fullName>COMMODITY</fullName>
                </value>
                <value>
                    <fullName>CONCENTRATED EQUITY</fullName>
                </value>
                <value>
                    <fullName>CONVERTIBLE BOND EUROPE</fullName>
                </value>
                <value>
                    <fullName>CORE EQUITY</fullName>
                </value>
                <value>
                    <fullName>CORE FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>CORE PLUS</fullName>
                </value>
                <value>
                    <fullName>CORE PLUS FIXED INCOME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSProductType__c</fullName>
        <description>Product Type as integrated from MARS</description>
        <label>MARS Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COLLECTIVE TRUST</fullName>
                </value>
                <value>
                    <fullName>DUMMY PRODUCT</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL INTL</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT TRUST</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT NON-ELIGIBLE</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND - COPY</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND - NO FEE</fullName>
                </value>
                <value>
                    <fullName>OFFSHORE</fullName>
                </value>
                <value>
                    <fullName>OVERLAY</fullName>
                </value>
                <value>
                    <fullName>PRIVATE PLACEMENT</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
                <value>
                    <fullName>SUB ADVISED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSShareClass__c</fullName>
        <description>Share Class as integrated from MARS; determines initial record type of product</description>
        <label>MARS Share Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A SHARES</fullName>
                </value>
                <value>
                    <fullName>B SHARES</fullName>
                </value>
                <value>
                    <fullName>C SHARES</fullName>
                </value>
                <value>
                    <fullName>D SHARES</fullName>
                </value>
                <value>
                    <fullName>N SHARES</fullName>
                </value>
                <value>
                    <fullName>Y SHARES</fullName>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>ADVISOR</fullName>
                </value>
                <value>
                    <fullName>INVESTOR</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
                <value>
                    <fullName>HEDGED INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>HEDGED SUPER INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>SUPER INSTITUTIONAL SHARES</fullName>
                </value>
                <value>
                    <fullName>A1 SHARES</fullName>
                </value>
                <value>
                    <fullName>C1 SHARES</fullName>
                </value>
                <value>
                    <fullName>NO FEE NOT MARKETED SHARES</fullName>
                </value>
                <value>
                    <fullName>HRA USD</fullName>
                </value>
                <value>
                    <fullName>IA USD</fullName>
                </value>
                <value>
                    <fullName>HIA USD</fullName>
                </value>
                <value>
                    <fullName>HREA USD</fullName>
                </value>
                <value>
                    <fullName>IA EUR</fullName>
                </value>
                <value>
                    <fullName>RA USD</fullName>
                </value>
                <value>
                    <fullName>RD USD</fullName>
                </value>
                <value>
                    <fullName>CA USD</fullName>
                </value>
                <value>
                    <fullName>REA USD</fullName>
                </value>
                <value>
                    <fullName>CD USD</fullName>
                </value>
                <value>
                    <fullName>S1A USD</fullName>
                </value>
                <value>
                    <fullName>SA USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSShortName__c</fullName>
        <description>Short Name as integrated from MARS</description>
        <label>MARS Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARSStatus__c</fullName>
        <description>Status as integrated from MARS</description>
        <label>MARS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>CLOSED TO NEW INVESTORS</fullName>
                </value>
                <value>
                    <fullName>OPEN TO NEW INVESTORS</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARSTradingSymbol__c</fullName>
        <description>Trading Symbol as integrated from MARS</description>
        <label>MARS Trading Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxExternalProdPerfDate__c</fullName>
        <formula>MaxExternalProductPerformance__r.AsOfDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max External Prod Perf Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxExternalProductPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Max External Product Performance</label>
        <referenceTo>ProductPerformance__c</referenceTo>
        <relationshipLabel>Products (Max External Product Performance)</relationshipLabel>
        <relationshipName>ProductsMaxExternal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaxInternalProdPerfDate__c</fullName>
        <formula>MaxInternalProductPerformance__r.AsOfDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Internal Prod Perf Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxInternalProductPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Max Internal Product Performance</label>
        <referenceTo>ProductPerformance__c</referenceTo>
        <relationshipLabel>Products (Max Internal Product Performance)</relationshipLabel>
        <relationshipName>ProductsMaxInternal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MorningstarId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Morningstar Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NonNatixis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Natixis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartNum__c</fullName>
        <externalId>true</externalId>
        <label>Part Num</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Benchmark</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Benchmark</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Primary Benchmark)</relationshipLabel>
        <relationshipName>PrimaryBenchmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrivatePlacementProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this product a private placement product?</description>
        <label>Private Placement Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductStartsWith__c</fullName>
        <formula>LEFT(Name, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Starts With</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COLLECTIVE TRUST</fullName>
                </value>
                <value>
                    <fullName>HEDGE FUND</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL INTL</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL US</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT NON-ELIGIBLE</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND - COPY</fullName>
                </value>
                <value>
                    <fullName>MUTUAL FUND - NO FEE</fullName>
                </value>
                <value>
                    <fullName>OVERLAY</fullName>
                </value>
                <value>
                    <fullName>PRIVATE PLACEMENT</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
                <value>
                    <fullName>SUB ADVISED</fullName>
                </value>
                <value>
                    <fullName>STRATEGY</fullName>
                </value>
                <value>
                    <fullName>OFFSHORE</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT TRUST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag a subset of the 4K+ products available to choose from to allow for easier product association to activities and opportunities. Distribution Strategies manages the list and SES will flag accordingly.</description>
        <label>Product Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_18_Character_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product 18 Character ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Starts_With_L_Group__c</fullName>
        <description>Formula field to "group" Product Names starting with the letter "L" into 3 groups. This is used by the "" Flow in order to populate dynamic choice fields for Products starting with the letter "L" into groups of less than 200 Products (dynamic choice limit).</description>
        <formula>IF(LEFT(Name,6) = "LOOMIS",
   IF(MID(Name, 7, 1) = "," || MID(Name, 8, 1) = "A" || MID(Name, 8, 1) = "B" || MID(Name, 8, 1) = "C" || MID(Name, 8, 1) = "D" || MID(Name, 8, 1) = "E" || MID(Name, 8, 1) = "F" || MID(Name, 8, 1) = "G" || MID(Name, 8, 1) = "H",
      "L2",
      "L3"
   ),
   IF(MID(Name, 2, 1) = "A" || MID(Name, 2, 1) = "B" || MID(Name, 2, 1) = "C" || MID(Name, 2, 1) = "D" || MID(Name, 2, 1) = "E" || MID(Name, 2, 1) = "F" || MID(Name, 2, 1) = "G" || MID(Name, 2, 1) = "H" || MID(Name, 2, 1) = "I" || MID(Name, 2, 1) = "J" || MID(Name, 2, 1) = "K" || MID(Name, 2, 1) = "L" || MID(Name, 2, 1) = "M" || MID(Name, 2, 1) = "N" || MID(Name, 2, 2) = "OA" || MID(Name, 2, 2) = "OB" || MID(Name, 2, 2) = "OC" || MID(Name, 2, 2) = "OD" || MID(Name, 2, 2) = "OE" || MID(Name, 2, 2) = "OF" || MID(Name, 2, 2) = "OG" || MID(Name, 2, 2) = "OH" || MID(Name, 2, 2) = "OI" || MID(Name, 2, 2) = "OJ" || MID(Name, 2, 2) = "OK" || MID(Name, 2, 2) = "OL" || MID(Name, 2, 2) = "OM" || MID(Name, 2, 2) = "ON",
      "L1",
      "L4"
   ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name Starts With L Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RichTextName__c</fullName>
        <label>Rich Text Name</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Benchmark</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Benchmark</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Secondary Benchmark)</relationshipLabel>
        <relationshipName>SeocndaryBenchmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeismicProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox can be used to build form list drop downs in Seismic.</description>
        <label>Seismic Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShareClassName__c</fullName>
        <formula>CASE( TEXT(ShareClass__c), 
"A","Class A", 
"B","Class B",
"C","Class C", 
"N","Class N",
"T","Class T", 
"Y","Class Y",
"Admin","Admin Class",
"Advisor","Advisor Class", 
"Institutional","Institutional Class", 
"Investor","Investor Class",
"Retail","Retail Class",
"Service","Service Class",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareClass__c</fullName>
        <label>Share Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShareClass</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardizedRFPMutualFund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product will appear in the dropdown for Standardized RFP Mutual Fund in the Request RFI/RFP flow.</description>
        <inlineHelpText>If checked, this product will appear in the dropdown for Standardized RFP Mutual Fund in the Request RFI/RFP flow.</inlineHelpText>
        <label>Standardized RFP Mutual Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>CLOSED TO NEW INVESTORS</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>